# music

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  packages.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: analyze-songs.yml  build.yml  publish.yml  validate.yml
frontend/src/assets/: netflix_player.css
music/: .gitignore  __init__.py  artist.py  artistmanager.py  artists.py  data.py  datamanager.py  downloader.py  lyricsmanager.py  main.py  path.py  postprocessor.py  spotapi.py  starter.py  uploader.py
music/artist/: __init__.py  artist.py  artistmanager.py  artists.py
music/backend/: artistmanager.py  main.py  server.py  starter.py
music/backend/artist/: artist.py  artistmanager.py  artists.py
music/backend/backend/: artistmanager.py  main.py  server.py
music/backend/client/: _client.py  client.py  response_types.py
music/backend/downloads/: clean_ids.py  download.py  downloader.py  jobs.py  postprocessor.py  todownloadfilter.py  uploader.py
music/backend/utils/: args.py  config.py  path.py
music/client/: __init__.py  _client.py  client.py  response_types.py  spotdl.py
music/downloads/: __init__.py  clean_ids.py  download.py  downloader.py  jobs.py  postprocessor.py  todownloadfilter.py  uploader.py
music/frontend/: .env  package-lock.json  package.json
music/frontend/src/: App.vue
music/frontend/src/components/: ArtistList.vue  ArtistTile.vue  Episode.vue  EpisodeList.vue  EpisodeTile.vue  Header.vue  HomePage.vue  NewArtist.vue  NewArtistTile.vue  NewItemView.vue  NewSong.vue  NewSongTile.vue  SeasonList.vue  SeasonTile.vue  Serie.vue  Settings.vue  SmallEpisodeList.vue  SmallEpisodeTile.vue  Spinner.vue  VideoPlayer.vue
music/frontend/src/components/tiles/: ArtistTile.vue  NewArtistTile.vue  NewItemTile.vue  NewSongTile.vue
music/frontend/src/model/: Episode.ts  NewSerie.ts
music/frontend/src/router/: index.js
music/frontend/src/services/: HttpService.ts  MusicService.ts
music/frontend/src/views/: ArtistsView.vue  newArtistView.vue
music/main/: main.py
music/utils/: __init__.py  args.py  config.py  item.py  iteration.py  path.py  tokens.py
src/music/artist/: artistmanager.py
src/music/backend/: artistmanager.py  main.py
src/music/backend/artist/: artist.py  artistmanager.py
src/music/backend/backend/: __init__.py  artistmanager.py  main.py  server.py
src/music/backend/cli/: downloader.py  entry_point.py  main.py
src/music/backend/client/: _client.py  spotdl.py
src/music/backend/core/artist/: artists.py
src/music/backend/core/downloads/: __init__.py  (+3 more)
src/music/backend/downloads/: download.py  downloader.py  postprocessor.py  todownloadfilter.py
src/music/backend/utils/: config.py  item.py  path.py  tokens.py
src/music/cli/: check_missing_downloads.py  entry_point.py  run_in_ci.py  webapp.py
src/music/clients/: _spotify.py  spotdl.py  spotify.py  utils.py
src/music/context/: __init__.py  config.py  context.py  context_.py  options.py
src/music/download/: __init__.py  download_new_songs.py  downloaded_songs_processor.py  downloader.py  spotdl.py
src/music/frontend/: Dockerfile  vue.config.js
src/music/main/: _main.py  main.py  run_in_ci.py  uploader.py
src/music/models/: __init__.py  artist.py  config.py  options.py  path.py  response_types.py  secrets_.py  youtube.py
src/music/runtime/: __init__.py  runtime.py
src/music/server/: __init__.py  api.py  app.py  server.py
src/music/server/routers/: artists.py  songs.py
src/music/server/servers/: artists.py  songs.py
src/music/storage/: artist.py  artist_paths.py  storage.py
src/music/updaters/: __init__.py  artist.py  artists.py  download_ids.py  tracks.py
src/music/utils/: batched.py  cached_file_content.py  ci.py  ci_context.py  path.py  progress.py
src/music/webapp/cli/: backend.py  entry_point.py
src/music/webapp/context/: context.py
src/music/webapp/main/: backend.py  frontend.py  frontend_release.py  main.py
src/music/webapp/models/: config.py  options.py  path.py
tests/: artist_test.py  client_test.py  conftest.py  test_artist.py  test_cli_entry_point.py  test_client.py  test_entry_points.py  test_frontend_creation.py  test_main.py  test_path.py  test_spotify_api.py  test_webapp.py
tests/api/: test_server.py
tests/client/: test_spotify_client.py
tests/clients/: test_spotify_client.py
tests/downloader/: test_downloader.py
tests/main/: test_collect_new_songs.py  test_entry_points.py  test_main.py  test_webapp.py
tests/mocks/: __init__.py  cached_file_content.py  client.py  method.py  storage.py
tests/mocks/data/: album-songs.json  artist-albums.json  recommendations.json  related-artists.json  search-artist.json  top-tracks.json
tests/mocks/data/albums/: 4zhSWdHOuYGS7EoJiY6PaE.json  52Bso9BSusrjWj3SA3bBzM.json  6fgSKdHloRioPrZ9oJC7FH.json
tests/mocks/data/artist/: 1VPmR4DJC1PlOtd0IADAO0.json  246dkjvS1zLTtiykXe5h60.json  6AgTAQt8XS6jRWi4sX7w49.json
tests/mocks/data/artists/: 1VPmR4DJC1PlOtd0IADAO0_4LLpKhyESsyAXpc4laK94U_6AgTAQt8XS6jRWi4sX7w49_2XnBwblw31dfGnspMIwgWz.json  26cMerAxjx9GedFt0lMDjm.json  2XnBwblw31dfGnspMIwgWz.json  4LLpKhyESsyAXpc4laK94U.json  4LLpKhyESsyAXpc4laK94U_1VPmR4DJC1PlOtd0IADAO0_2XnBwblw31dfGnspMIwgWz_6AgTAQt8XS6jRWi4sX7w49.json
tests/mocks/data/track/: 008q1ztvnmNxD7W4VjfHrm.json  00Blm7zeNqgYLPtW6zg8cj.json
tests/mocks/data/tracks/: 008q1ztvnmNxD7W4VjfHrm_00Apys6jYrWA0Bse9Yon6O_00Blm7zeNqgYLPtW6zg8cj.json  00Apys6jYrWA0Bse9Yon6O.json  1Svz20TVWJe0Zt9QOA87LM.json  7FAFkQQZFeNwOFzTrSDFIh.json  7FAFkQQZFeNwOFzTrSDFIh_1OubIZ0ARYCUq5kceYUQiO.json  tracks.json
tests/models/: test_artist.py  test_path.py  test_response_types.py  test_webapp_path.py
tests/server/: client.py  test_artist_urls.py  test_exception_handling.py  test_song_urls.py
tests/storage/: test_artist_storage.py  test_storage.py
tests/updaters/: test_artists_updater.py  test_clean_download_ids.py  test_download_ids.py  test_tracks_updater.py
tests/utils/: test_batched.py  test_cached_file_content.py  test_ci_context_import.py  test_ci_import.py
(+3 files in other folders)
