[project]
name = "musicmaster"
version = "1.2.5"
description = "Analyze your favorite music"
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dirhash >=0.2.1, <1",
    "fastapi >=0.103.2, <1",
    "hostfinder >=0.0.5, <1",
    "mutagen >=1.47.0, <2",
    "package-utils[context] >=0.6.0, <1",
    "pysftp >=0.2.9, <1",
    "quinten-cli >=1.1.16, <2",
    "retry >=0.9.2, <1",
    "spotipy >=2.23.0, <3",
    "spotdl >=4.2.4, <5",
    "superpathlib >=2.0.1, <3",
    "tbhandler >=0.0.2, <1",
    "webapp-starter >=0.1.1, <1",
]

[project.optional-dependencies]
dev = [
    "hypothesis >=6.91.0, <7",
    "httpx >=0.26.0, <1",
    "package-dev-tools >=0.5.11, <1",
    "package-dev-utils >=0.1.6, <1",
    "types-pysftp >=0.2.17.6, <1",
    "types-requests >=2.31.0.10, <3",
    "types-retry >=0.9.9.4, <1",
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/music"

[project.scripts]
music = "music.cli.entry_point:entry_point"
music-webapp = "music.cli.webapp:entry_point"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
command_line = "-m pytest"

[tool.coverage.report]
precision = 4
fail_under = 100

[tool.mypy]
strict = true
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "hostfinder.*",
    "spotipy.*",
    "spotdl.*",
    "tbhandler.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    "src", ".",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.package-data]
music = ["py.typed"]
