[metadata]
name = music
version = 1.0.0
author = Quinten Roets
author_email = quinten.roets@gmail.com
url = https://github.com/quintenroets/music
license = MIT

[options]
packages = find:
include_package_data = True
package_dir =
    = .
    
[options.package_data]
music = 
    frontend/.**
    frontend/**
    
install_requires =
    dacite
    eyed3
    fastapi
    lyricsgenius
    munch
    mutagen
    pysftp
    python-dotenv
    retry
    spotipy
    spotdl

    libs @ git+https://github.com/quintenroets/libs
    tbhandler @ git+https://github.com/quintenroets/tbhandler
    quinten-cli
    superpathlib

[options.entry_points]
console_scripts =
    music = music:main
    musicserver = music.backend.starter:main

[options.packages.find]
where = .

[bdist_wheel]
universal = true
